add theme context

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 #
 .DS_Store
 
+# code editor
+.vscode
+
 # Xcode
 #
 build/
@@ -30,6 +33,7 @@ build/
 local.properties
 *.iml
 *.hprof
+android/app/debug.keystore
 
 # node.js
 #
