--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mealstogo",
+  "name": "foodfoodgo",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -13,10 +13,12 @@
     "@expo-google-fonts/oswald": "^0.2.2",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
+    "camelize": "^1.0.0",
     "expo": "~45.0.0",
     "expo-font": "~10.1.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "firebase": "^9.9.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
@@ -28,7 +30,8 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-unicode-property-regex": "^7.18.6"
   },
   "private": true
 }
