--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "foodfoodgo",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -11,6 +10,7 @@
   "dependencies": {
     "@expo-google-fonts/lato": "^0.2.2",
     "@expo-google-fonts/oswald": "^0.2.2",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.3",
@@ -30,7 +30,7 @@
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
     "react-native-web": "0.17.7",
-    "react-native-webview": "^11.23.0",
+    "react-native-webview": "11.18.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
