--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-font": "~10.1.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.4",
     "firebase": "9.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -31,6 +32,7 @@
     "react-native-svg": "12.3.0",
     "react-native-web": "0.17.7",
     "react-native-webview": "11.18.1",
+    "sharp-cli": "^2.1.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
